# zzz

./: .gitignore  Cargo.toml  package.json
src/: main.rs
tauri/: package.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
webui/: package.json  pnpm-lock.yaml
webui/src/: index.css
zzz_core/: .gitignore  Cargo.toml
zzz_core/src/: lib.rs  main.rs
zzz_core/src/binary_data_process/: mod.rs  pack.rs  z_aes.rs  z_base.rs  z_bit.rs  z_compress.rs  z_rsa.rs
zzz_core/src/model/: base.rs
zzz_core/src/shell/: base.rs  full_shell.rs  mod.rs
zzz_core/src/transport/: base.rs  demo.rs  mod.rs
zzz_core/src/transport/implementation/: bbb.rs  fake_base64_image.1.html  fake_base64_image.rs  fake_encrypted_login.rs  fake_teams_a.rs  mod.rs  png_lsb_xor.rs
zzz_core/src/utils/: base.rs  mod.rs  sys_info.rs
zzz_core/src/web/: base.rs  mod.rs
zzz_implant/: Cargo.toml
zzz_server/: Cargo.toml
