[package]
name = "zzz_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"          # 降回 0.8，与 rsa 0.9 兼容（rsa 依赖 rand_core ^0.6，对应 rand 0.8）
sha1 = "0.10"
sha2 = "0.10"         # 0.11 尚无稳定版，最新稳定为 0.10.9
base64 = "0.22"
chrono = "0.4"
whoami = "1.5"        # 2.x 尚无稳定发布，最新稳定为 1.5
uuid = { version = "1.16", features = ["v4"] }
anyhow = "1.0"
hex = "0.4"
aes-gcm = "0.10"      # 0.10.3 是最新稳定版，0.11 仍是 RC
rsa = "0.9"
libc = "0.2.183"
os_info = "3.14.0"
obfstr = "0.4"
colored = "3.1.1"
lz4_flex = "0.13.0"
flate2 = "1.1.9"
zstd = "0.13.3"
ctr = "0.9.2"
actix-web = "4.13.0"
reqwest = { version = "0.13.2", features = ["form"] }
urlencoding = "2.1.3"

[TARGET.'cfg(windows)'.dependencies]
winreg       = "0.52"
windows-sys  = { version = "0.61.2", features = [
    "Win32_Globalization",   # MultiByteToWideChar, CP_ACP
] }